--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@
   --pos-top: 100;
   --pos-normal: 50;
   --pos-back: 0;
+  --font-family: montserrat, sans-serif;
+  --font-normal: 400;
+  --font-bold: 700;
 }
 
 /*
@@ -38,12 +41,14 @@ a:hover :not(.no-anim) {
 /*
 structure
 */
+html,
 body {
   margin: 0;
   min-width: 100%;
   min-height: 100%;
   overflow-x: hidden;
-  overflow-y: hidden;
+  font-family: var(--font-family);
+  scroll-behavior: smooth;
 }
 
 section {
@@ -57,7 +62,6 @@ section {
   background-image: url(img/bgfire.png);
   background-size: cover;
   color: var(--color-default);
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif, Helvetica, sans-serif;
   letter-spacing: var(--spacing-menu);
   box-sizing: border-box;
 }
@@ -77,12 +81,14 @@ header .logo {
 header .menu {
   display: flex;
   flex-direction: row;
+  font-weight: var(--font-bold);
   margin-right: 10%;
 }
 header .menu div {
   margin: 0 1vw;
 }
-header .menu .social i:not(.fa-pipe) {
+
+.social i:not(.fa-pipe) {
   margin: 0 0.2vw;
 }
 
@@ -92,7 +98,7 @@ header .menu .social i:not(.fa-pipe) {
   display: flex;
   flex-direction: column;
 }
-#content div {
+#content > div {
   margin: 2% 0;
   z-index: var(--pos-normal);
 }
@@ -101,6 +107,11 @@ header .menu .social i:not(.fa-pipe) {
   z-index: var(--pos-back);
   bottom: -15%;
   right: -15%;
+}
+
+.bg-black {
+  background-color: var(--color-black);
+  opacity: 0.8;
 }
 
 footer {
@@ -112,8 +123,69 @@ footer {
   bottom: 0;*/
   display: flex;
   justify-content: center;
+}
+
+#about div {
+  width: 100%;
+}
+#about .top {
+  text-align: right;
+  vertical-align: baseline;
   background-color: var(--color-black);
-  opacity: 0.8;
+  margin: 0;
+  display: flex;
+  height: 15vh;
+  align-items: flex-end;
+}
+#about .top > div:last-child {
+  padding-right: 10%;
+  z-index: 9000;
+}
+#about .yellow {
+  color: var(--color-black);
+  background-color: yellow;
+  margin: 0;
+  flex-direction: row;
+  display: flex;
+  height: 85vh;
+  justify-content: center;
+}
+#about .yellow > div {
+  text-align: center;
+  overflow-y: visible;
+  width: 40%;
+}
+#about .yellow li {
+  text-align: left;
+  list-style-image: url(img/dot.png);
+  opacity: 0.9;
+  margin: 2rem 0;
+  font-weight: var(--font-bold);
+}
+#about .yellow video {
+  z-index: 9000;
+  width: 80%;
+  margin-top: -4rem;
+}
+#about footer {
+  background-color: var(--color-black);
+  display: flex;
+  justify-content: start;
+  flex-direction: row;
+  align-items: flex-start;
+}
+#about footer div {
+  width: unset;
+  padding: 0 10rem;
+}
+#about footer div:last-child {
+  align-items: flex-end;
+  text-align: right;
+  display: flex;
+  flex-direction: row;
+}
+#about footer div:last-child > div {
+  width: 100%;
 }
 
 /*# sourceMappingURL=style.css.map */
