--- a/style.css
+++ b/style.css
@@ -1,3 +1,12 @@
+@charset "UTF-8";
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap");
+/*
+320px — 480px: Mobile devices
+481px — 768px: iPads, Tablets
+769px — 1024px: Small screens, laptops
+1025px — 1200px: Desktops, large screens
+1201px and more —  Extra large screens, TV
+*/
 :root {
   --spacing: .1rem;
   --spacing-menu: var(--spacing);
@@ -9,16 +18,30 @@
   --pos-top: 100;
   --pos-normal: 50;
   --pos-back: 0;
-  --font-family: montserrat, sans-serif;
+  --font-family: Montserrat, sans-serif;
   --font-normal: 400;
   --font-bold: 700;
+  --font-extrabold: 900;
 }
 
+#home {
+  height: 100vh;
+}
 /*
 generals
 */
 span {
   display: inline-block;
+}
+
+h1 {
+  font-weight: var(--font-extrabold);
+  font-size: xx-large;
+  margin-block: 0.5rem;
+}
+
+h3 {
+  margin-block-end: 0;
 }
 
 a {
@@ -65,6 +88,11 @@ section {
   letter-spacing: var(--spacing-menu);
   box-sizing: border-box;
 }
+@media screen and (max-width: 768px) {
+  section {
+    align-items: unset;
+  }
+}
 
 header {
   z-index: var(--pos-top);
@@ -73,6 +101,13 @@ header {
   justify-content: space-between;
   padding-top: 7%;
   width: 100%;
+}
+@media screen and (max-width: 768px) {
+  header {
+    flex-direction: column;
+    padding: 0;
+    justify-content: center;
+  }
 }
 header .logo {
   align-self: flex-start;
@@ -88,6 +123,19 @@ header .menu {
 header .menu div {
   margin: 0 1vw;
 }
+@media screen and (max-width: 768px) {
+  header .menu {
+    transform: unset;
+  }
+  header .menu > div:not(.social) {
+    display: none;
+  }
+  header .menu .social {
+    position: fixed;
+    top: 0;
+    right: 0;
+  }
+}
 
 .social i:not(.fa-pipe) {
   margin: 0 0.2vw;
@@ -99,6 +147,14 @@ header .menu div {
   display: flex;
   flex-direction: column;
 }
+@media screen and (max-width: 768px) {
+  #content {
+    text-align: center;
+  }
+  #content picture, #content img {
+    width: 94%;
+  }
+}
 #content > div {
   margin: 2% 0;
   z-index: var(--pos-normal);
@@ -108,6 +164,11 @@ header .menu div {
   z-index: var(--pos-back);
   bottom: -15%;
   right: -15%;
+}
+@media screen and (max-width: 768px) {
+  #content .torch {
+    display: none;
+  }
 }
 
 .bg-black {
@@ -120,16 +181,30 @@ footer {
   padding: 1vh 0;
   width: 100%;
   position: inherit;
-  /*position: absolute;
-  bottom: 0;*/
   display: flex;
   background-color: var(--color-black);
   justify-content: space-around;
   flex-direction: row;
 }
+@media screen and (max-width: 768px) {
+  footer {
+    text-align: center;
+    flex-direction: column;
+  }
+  footer .social {
+    display: none;
+  }
+}
 footer .menu {
   display: flex;
   flex-direction: row;
+}
+@media screen and (max-width: 768px) {
+  footer .menu {
+    flex-direction: column;
+    height: auto;
+    width: 100%;
+  }
 }
 
 #about {
@@ -147,9 +222,31 @@ footer .menu {
   height: 15vh;
   align-items: flex-end;
 }
+@media screen and (max-width: 768px) {
+  #about .top {
+    height: auto;
+    text-align: center;
+    padding-top: 4rem;
+  }
+}
+#about .top picture,
+#about .top img {
+  width: 40%;
+}
+@media screen and (max-width: 768px) {
+  #about .top picture,
+#about .top img {
+    width: 94%;
+  }
+}
 #about .top > div:last-child {
   padding-right: 10%;
   z-index: 9000;
+}
+@media screen and (max-width: 768px) {
+  #about .top > div:last-child {
+    padding: 0;
+  }
 }
 #about .yellow {
   color: var(--color-black);
@@ -160,16 +257,29 @@ footer .menu {
   height: 65vh;
   justify-content: center;
 }
+@media screen and (max-width: 768px) {
+  #about .yellow {
+    flex-direction: column;
+    height: auto;
+  }
+}
 #about .yellow > div {
   text-align: center;
   overflow-y: visible;
   width: 40%;
 }
+@media screen and (max-width: 768px) {
+  #about .yellow > div {
+    width: 100%;
+    height: auto;
+  }
+}
 #about .yellow li {
+  /*transform: scale(.7);*/
   text-align: left;
   list-style-image: url(img/dot.png);
   opacity: 0.9;
-  margin: 2rem 0;
+  margin: 1rem 0;
   font-weight: var(--font-bold);
 }
 #about .yellow video {
@@ -177,24 +287,31 @@ footer .menu {
   width: 80%;
   margin-top: -4rem;
 }
+@media screen and (max-width: 768px) {
+  #about .yellow video {
+    margin: 0;
+    width: 100%;
+  }
+}
 
 #shop {
   background-color: white;
   background-image: none;
+  text-align: center;
 }
 #shop img {
   margin-top: 15vh;
   margin-bottom: 7.5vh;
+  width: 90%;
 }
 
 #news {
   background-image: url(img/bgnews.png);
   text-align: center;
   color: var(--color-black);
-  padding-top: 10vh;
 }
 #news > div {
-  height: 34vh;
+  height: 50vh;
   width: 100%;
   justify-content: center;
   display: flex;
@@ -204,6 +321,14 @@ footer .menu {
   justify-content: center;
   flex-direction: column;
   width: 66%;
+}
+@media screen and (max-width: 768px) {
+  #news > div form {
+    width: 100%;
+  }
+}
+#news > div form div {
+  margin-bottom: 1rem;
 }
 #news > div form div input {
   border: none;
@@ -215,8 +340,12 @@ footer .menu {
   padding: 10px;
   box-sizing: inherit;
 }
+#news > div form div input[type=email]::placeholder {
+  text-align: center;
+}
 #news > div form div input[type=button] {
-  font-weight: bold;
+  font-weight: var(--font-extrabold);
+  font-size: larger;
   text-transform: uppercase;
 }
 
@@ -235,6 +364,24 @@ footer .menu {
   font-weight: bold;
   border: 0;
 }
+@media screen and (max-width: 768px) {
+  #Contact {
+    width: 100%;
+  }
+  #Contact table,
+#Contact tbody,
+#Contact tr,
+#Contact td {
+    display: block;
+    border: none;
+    text-align: center;
+    padding: 0%;
+    width: 100%;
+  }
+  #Contact tr {
+    margin: 1rem 0;
+  }
+}
 
 .shopnow {
   font-size: larger;
@@ -243,7 +390,7 @@ footer .menu {
   background-color: black;
   color: var(--color-yellow);
   cursor: pointer;
-  font-weight: 700;
+  font-weight: var(--font-extrabold);
 }
 
 /*# sourceMappingURL=style.css.map */
