--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
   margin: 0;
   min-width: 100%;
   min-height: 100%;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
   font-family: var(--font-family);
   scroll-behavior: smooth;
 }
@@ -79,7 +79,6 @@ section {
   align-items: center;
   font-size: var(--font-size);
   background-size: cover;
-  overflow-x: hidden;
   color: var(--color-default);
   letter-spacing: var(--spacing-menu);
   box-sizing: border-box;
@@ -133,7 +132,9 @@ header .menu div {
 #home {
   height: 100vh;
   background-image: url(img/bgfire.png);
-  padding-left: 10vw;
+  padding: 0 10vw;
+  position: relative;
+  overflow-x: hidden;
 }
 @media screen and (max-width: 768px) {
   #home {
@@ -142,6 +143,78 @@ header .menu div {
     background-image: url(img/bgfire_m.png);
     background-repeat: no-repeat;
   }
+}
+
+#moreaboutus {
+  background-image: url(img/bg_test.png);
+}
+#moreaboutus .top-yellow {
+  height: 2vh;
+  background-color: #FDF035;
+  width: 100%;
+  position: relative;
+  top: 0;
+}
+#moreaboutus .testimonial-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  position: relative;
+  top: -3vh;
+}
+@media screen and (max-width: 768px) {
+  #moreaboutus .testimonial-list {
+    top: unset;
+  }
+}
+#moreaboutus .testimonial-list .testimonial {
+  width: 375px;
+  position: relative;
+  color: #1A1A1A;
+  font-size: small;
+  margin-right: 5%;
+}
+#moreaboutus .testimonial-list .testimonial img {
+  width: 100%;
+}
+#moreaboutus .testimonial-list .testimonial .quote {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  position: absolute;
+  top: 40px;
+  text-indent: 50px;
+  padding: 20px 20px 20px 40px;
+}
+#moreaboutus .testimonial-list .testimonial .author {
+  position: absolute;
+  top: 170px;
+  right: 35px;
+  font-weight: bold;
+}
+#moreaboutus .testimonial-list .testimonial .f-small {
+  font-size: small;
+}
+#moreaboutus #FAQ {
+  max-width: 80vw;
+}
+@media screen and (max-width: 768px) {
+  #moreaboutus #FAQ {
+    max-width: unset;
+  }
+}
+#moreaboutus #FAQ > div:first-of-type {
+  margin: 1rem;
+  font-size: x-large;
+}
+#moreaboutus #FAQ > div:last-of-type {
+  background-color: #FDF035;
+  color: #1A1A1A;
+  padding: 2rem 2rem 2rem 2rem;
+  font-weight: 500;
+}
+#moreaboutus #FAQ > div:last-of-type strong {
+  font-weight: 900;
+  font-size: xx-large;
 }
 
 #content {
@@ -192,6 +265,7 @@ header .menu div {
   width: 30vw;
   bottom: -5vh;
   right: -15vw;
+  overflow-x: hidden;
 }
 #content .torch img {
   width: 100%;
