--- a/style.scss
+++ b/style.scss
@@ -167,7 +167,7 @@ header {
     .testimonial-list {
         display: flex;
         flex-wrap: wrap;
-        justify-content: flex-start;
+        justify-content: center;
         position: relative;
         top: -3vh;
         @media screen and (max-width: $screen-md-max) {
