--- a/style.css
+++ b/style.css
@@ -158,7 +158,7 @@ header .menu div {
 #moreaboutus .testimonial-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   position: relative;
   top: -3vh;
 }
