--- a/style.scss
+++ b/style.scss
@@ -213,7 +213,7 @@ header {
         >div:last-of-type {
             background-color: #FDF035;
             color: #1A1A1A;
-            padding: 2rem 2rem 2rem 2rem;
+            padding: 4rem;
             font-weight: 500;
             strong {
                 font-weight: 900;
