--- a/style.scss
+++ b/style.scss
@@ -214,6 +214,7 @@ header {
             background-color: #FDF035;
             color: #1A1A1A;
             padding: 4rem;
+            font-size:medium;
             font-weight: 500;
             strong {
                 font-weight: 900;
